--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,15 +27,15 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:design:26.+'
     compile 'com.android.support:cardview-v7:26.+'
     compile 'com.android.support:recyclerview-v7:26.+'
-    compile 'com.google.code.gson:gson:2.8.2'
     compile 'uk.co.chrisjenx:calligraphy:2.3.0'
-    compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.android.gms:play-services-auth:9.8.0'
     compile 'com.google.android.gms:play-services-location:9.8.0'
-    compile 'net.steamcrafted:materialiconlib:1.1.4'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'br.com.mauker.materialsearchview:materialsearchview:1.2.2'
+
     testCompile 'junit:junit:4.12'
 }
