--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,13 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'br.com.mauker.materialsearchview:materialsearchview:1.2.2'
 
+
+    compile 'pl.charmas.android:android-reactive-location2:2.1@aar'
+    compile 'io.reactivex.rxjava2:rxjava:2.2.8'
+    compile 'io.reactivex.rxjava2:rxandroid:2.1.0'
+
+
+    compile 'com.squareup.okhttp3:logging-interceptor:3.12.1'
+
     testCompile 'junit:junit:4.12'
 }
